# etf-allocation-decision-support

./: .env.example  .gitignore  README.md  pyproject.toml
data/processed/: etf_universe_classified.csv  macro_quality.csv
notebooks/: validate_llm_classification.ipynb  validate_macro_data.ipynb
scripts/: build_portfolio_optimizer_precomputed.py  build_tableau_relational_model.py  classify_etfs.py  fetch_fred_macro.py  fetch_ishares_etfs.py  fetch_yahoo_prices.py
src/: config.py  tableau_relational.py  utils.py
src/downloaders/: __init__.py  etf_characteristics.py  ishares_classification.py  ishares_config.py  macro.py  prices.py
src/gathering/: etf_universe.py  macro.py  prices.py
src/llm/: __init__.py  classify_etf.j2  client.py  schema.py  workflow.py  workflow_config.py  workflow_io.py  workflow_steps.py
src/optimizer/: __init__.py  constants.py  markowitz.py  precomputed.py  simulation.py  tables.py
src/preprocessing/: __init__.py  io.py  macro.py  main.py  monthly.py
src/tableau_model/: __init__.py  build.py  constants.py  dimensions.py  facts.py  filters.py  helpers.py  industry_classification.csv  validation.py
tableau_input/: ETFs_allocation_dashboards.twb  portfolio_optimizer_precomputed.xlsx  tableau_data_final.xlsx
tests/: conftest.py  test_etf_universe_gathering.py  test_macro_gathering.py  test_openai_classification_integration.py  test_openai_client.py  test_price_gathering.py
